<resources>
    <string name="app_name">Just Java</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="whippedCream">Whipped cream</string>
    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="orderSum">Order Summary</string>
    <string name="chocolate">Chocolate</string>
    <string name="caramel">Caramel</string>
    <string name="basePrice">Base price</string>
    <string name="iced">Iced</string>
    <string name="hot">Hot</string>
    <string name="size">Size</string>
    <string name="sugar">Sugar</string>
    <string name="espresso">Espresso</string>
    <string name="americano">Americano</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="latte">Latte</string>

    <string-array name="choose_item">
        <item>Espresso</item>
        <item>Americano</item>
        <item>Cappuccino</item>
        <item>Latte</item>
        <item>Tea</item>
    </string-array>
</resources>