<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioCoffeeGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton android:id="@+id/espresso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/espresso"
                        android:onClick="onRadioButtonClicked"/>
                    <RadioButton android:id="@+id/americano"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/americano"
                        android:onClick="onRadioButtonClicked"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioButton android:id="@+id/cappuccino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cappuccino"
                        android:onClick="onRadioButtonClicked"/>
                    <RadioButton android:id="@+id/latte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latte"
                        android:onClick="onRadioButtonClicked"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="10dp"
                android:text="@string/hot"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/iced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="10dp"
                android:text="@string/iced"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            style="@style/Headings"
            android:layout_marginBottom="16dp"
            android:text="@string/size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cup" />

                <CheckBox
                    android:id="@+id/tallCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tall" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/grande"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cup" />

                <CheckBox
                    android:id="@+id/grandeCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Grande" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/venti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cup" />

                <CheckBox
                    android:id="@+id/ventiCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Venti" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/quantity"
            style="@style/Headings"
            android:layout_marginBottom="16dp"
            android:text="@string/sugar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/inc"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="increment"
                android:text="+" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="2"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/dec"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginBottom="16dp"
                android:onClick="decrement"
                android:text="-" />
        </LinearLayout>

        <TextView
            android:id="@+id/toppings"
            style="@style/Headings"
            android:layout_marginBottom="16dp"
            android:text="@string/toppings" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox

                    android:id="@+id/whippedCreamCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:padding="10dp"
                    android:text="@string/whippedCream"
                    android:textSize="16sp" />

                <CheckBox

                    android:id="@+id/chocolateCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:padding="10dp"
                    android:text="@string/chocolate"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/caramelCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="160dp"
                    android:layout_marginBottom="16dp"
                    android:padding="10dp"
                    android:text="@string/caramel"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/button"
            style="@style/OrderButton"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />

    </LinearLayout>
</ScrollView>